--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,28 +4,53 @@
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
+      <!-- Begin Mailchimp Signup Form -->
       <div class="footer-col">
+        <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+          #mc_embed_signup{background:#fdf6e3; clear:left; font:14px Helvetica,Arial,sans-serif; }
+          /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+          <form action="https://gmail.us1.list-manage.com/subscribe/post?u=c4edebfa3a46db1840c0ebac0&amp;id=0f0dbd102e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+            <label for="mce-EMAIL">Subscribe via email to get notified when a new post goes up!</label>
+            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c4edebfa3a46db1840c0ebac0_0f0dbd102e" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              </div>
+          </form>
+        </div>
+        <!--End mc_embed_signup-->
         <p class="feed-subscribe">
           <a href="{{ 'feed.xml' | relative_url }}">
             <svg class="svg-icon orange">
               <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
-            </svg><span>Subscribe</span>
+            </svg><span>Subscribe via RSS</span>
           </a>
         </p>
-      {%- if site.author %}
-        <ul class="contact-list">
-          {% if site.author.name -%}
-            <li class="p-name">{{ site.author.name | escape }}</li>
-          {% endif -%}
-          {% if site.author.email -%}
-            <li><span class="u-email">{{ site.author.email }}</span></li>
-          {%- endif %}
-        </ul>
-      {%- endif %}
       </div>
+
+      <!-- <div class="footer-col">
+        <p>{{ site.description | escape }}</p>
+      </div> -->
+
       <div class="footer-col">
         <p>{{ site.description | escape }}</p>
+        {%- if site.author %}
+          <ul class="contact-list">
+            {% if site.author.name -%}
+              <li class="p-name">{{ site.author.name | escape }}</li>
+            {% endif -%}
+            {% if site.author.email -%}
+              <li><span class="u-email">{{ site.author.email }}</span></li>
+            {%- endif %}
+          </ul>
+        {%- endif %}
       </div>
+      
     </div>
 
     <div class="social-links">
