--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -26,7 +26,7 @@
   
         &.pager-edge {
           color: $border-color-01;
-          border: 1px dashed;
+        //   border: 1px dashed;
         }
       }
     }
