--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -10,24 +10,24 @@
 /**
  * Pagination navbar
  */
- .pagination {
-    margin-bottom: $spacing-unit;
-    @extend .social-media-list;
-    li {
-      a, div {
-        min-width: 41px;
-        text-align: center;
-        box-sizing: border-box;
-      }
-      div {
-        display: block;
-        padding: $spacing-unit / 4;
-        border: 1px solid transparent;
+//  .pagination {
+//     margin-bottom: $spacing-unit;
+//     @extend .social-media-list;
+//     li {
+//       a, div {
+//         min-width: 41px;
+//         text-align: center;
+//         box-sizing: border-box;
+//       }
+//       div {
+//         display: block;
+//         padding: $spacing-unit / 4;
+//         border: 1px solid transparent;
   
-        &.pager-edge {
-          color: $border-color-01;
-          border: 1px dashed;
-        }
-      }
-    }
-  }
+//         &.pager-edge {
+//           color: $border-color-01;
+//           border: 1px dashed;
+//         }
+//       }
+//     }
+//   }
