--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -1,7 +1,3 @@
-html {
-  font-size: $base-font-size;
-}
-
 /**
  * Reset some basic elements
  */
@@ -10,7 +6,6 @@ p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
   margin: 0;
   padding: 0;
-
 }
 
 
@@ -20,9 +15,8 @@ dl, dd, ol, ul, figure {
  */
 body {
   font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
-  color: #4D4E64;
-  // background-color: $background-color;
-  background-color:#F5F5F4;
+  color: $text-color;
+  background-color: $background-color;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
      -moz-font-feature-settings: "kern" 1;
@@ -32,7 +26,6 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  overflow-wrap: break-word;
 }
 
 
@@ -47,10 +40,7 @@ ul, ol, dl, figure,
   margin-bottom: $spacing-unit / 2;
 }
 
-hr {
-  margin-top: $spacing-unit;
-  margin-bottom: $spacing-unit;
-}
+
 
 /**
  * `main` element
@@ -113,19 +103,15 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  // color: $link-base-color;
-  color: #CB553B;
-  // color: #f0a715;
+  color: $brand-color;
   text-decoration: none;
 
   &:visited {
-    // color: $link-visited-color;
-    color: #B79FAA;
-
+    color: darken($brand-color, 15%);
   }
 
   &:hover {
-    color: $link-hover-color;
+    color: $text-color;
     text-decoration: underline;
   }
 
@@ -143,18 +129,15 @@ a {
  * Blockquotes
  */
 blockquote {
-  color: $brand-color;
-  border-left: 4px solid $border-color-01;
+  color: $grey-color;
+  border-left: 4px solid $grey-color-light;
   padding-left: $spacing-unit / 2;
   @include relative-font-size(1.125);
+  letter-spacing: -1px;
   font-style: italic;
 
   > :last-child {
     margin-bottom: 0;
-  }
-
-  i, em {
-    font-style: normal;
   }
 }
 
@@ -165,11 +148,10 @@ blockquote {
  */
 pre,
 code {
-  font-family: $code-font-family;
-  font-size: 0.9375em;
-  border: 1px solid $border-color-01;
+  @include relative-font-size(0.9375);
+  border: 1px solid $grey-color-light;
   border-radius: 3px;
-  background-color: $code-background-color;
+  background-color: #eef;
 }
 
 code {
@@ -187,43 +169,30 @@ pre {
   }
 }
 
-.highlight {
-  border-radius: 3px;
-  background: $code-background-color;
-  @extend %vertical-rhythm;
-
-  .highlighter-rouge & {
-    background: $code-background-color;
-  }
-}
-
 
 
 /**
  * Wrapper
  */
 .wrapper {
-  max-width: calc(#{$content-width} - (#{$spacing-unit}));
+  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
+  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
   margin-right: auto;
   margin-left: auto;
-  padding-right: $spacing-unit / 2;
-  padding-left: $spacing-unit / 2;
-  // @extend %clearfix;
+  padding-right: $spacing-unit;
+  padding-left: $spacing-unit;
+  @extend %clearfix;
 
-  @media screen and (min-width: $on-large) {
-    max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
-    // justify-content: space-between;
-    // flex-wrap: wrap;
+  @include media-query($on-laptop) {
+    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
+    max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+    padding-right: $spacing-unit / 2;
+    padding-left: $spacing-unit / 2;
   }
 
-  @media screen and (max-width: $on-medium){
+  @include media-query($on-palm){
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    flex-direction:column;
   }
 }
 
@@ -244,22 +213,21 @@ pre {
  * Icons
  */
 
-.orange {
-  color: #f66a0a;
-}
-
-.grey {
-  color: #828282;
-}
-
 .svg-icon {
-  width: 16px;
-  height: 16px;
-  display: inline-block;
-  fill: currentColor;
-  padding: 5px 3px 2px 5px;
-  vertical-align: text-bottom;
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    fill: #{$grey-color};
+    padding-right: 5px;
+    vertical-align: text-top;
 }
+
+.social-media-list {
+  li + li {
+    padding-top: 5px;
+  }
+}
+
 
 
 /**
@@ -269,29 +237,23 @@ table {
   margin-bottom: $spacing-unit;
   width: 100%;
   text-align: $table-text-align;
-  color: $table-text-color;
+  color: lighten($text-color, 18%);
   border-collapse: collapse;
-  border: 1px solid $table-border-color;
+  border: 1px solid $grey-color-light;
   tr {
     &:nth-child(even) {
-      background-color: $table-zebra-color;
+      background-color: lighten($grey-color-light, 6%);
     }
   }
   th, td {
     padding: ($spacing-unit / 3) ($spacing-unit / 2);
   }
   th {
-    background-color: $table-header-bg-color;
-    border: 1px solid $table-header-border;
+    background-color: lighten($grey-color-light, 3%);
+    border: 1px solid darken($grey-color-light, 4%);
+    border-bottom-color: darken($grey-color-light, 12%);
   }
   td {
-    border: 1px solid $table-border-color;
-  }
-
-  @include media-query($on-laptop) {
-    display: block;
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-            -ms-overflow-style: -ms-autohiding-scrollbar;
+    border: 1px solid $grey-color-light;
   }
 }
