changed header band color

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -11,10 +11,9 @@ $base-line-height: 1.5 !default;
 $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
-// $background-color: #fdfdfd !default;
 $background-color: #F0E5CF !default;
-// $brand-color:      #2a7ae2 !default;
 $brand-color:      #C06014 !default;
+$header-band-color: #536162 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
