--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -13,7 +13,7 @@ $spacing-unit:     30px !default;
 $text-color:       #111 !default;
 $background-color: #F0E5CF !default;
 $brand-color:      #C06014 !default;
-$header-band-color: #536162 !default;
+$head-foot-band-color: #536162 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
