--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -3,7 +3,7 @@
  */
 .site-header {
   border-top: 5px solid $grey-color-dark;
-  border-bottom: 1px solid $header-band-color;
+  border-bottom: 1px solid $head-foot-band-color;
   min-height: $spacing-unit * 1.865;
 
   // Positioning context for the mobile navigation icon
@@ -110,7 +110,7 @@
  * Site footer
  */
 .site-footer {
-  border-top: 1px solid $grey-color-light;
+  border-top: 1px solid $head-foot-band-color;
   padding: $spacing-unit 0;
 }
 
