added an image back to btc post

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -257,3 +257,12 @@ table {
     border: 1px solid $grey-color-light;
   }
 }
+
+.hide{
+  display: none;
+}
+.easter-egg:hover + .hide{
+  display: inline;
+  color: #a463f2;
+  
+}
