--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -10,9 +10,9 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
+$text-color:       #191A19 !default;
 $background-color: #F0E5CF !default;
-$brand-color:      #C06014 !default;
+$brand-color:      #4E9F3D !default;
 $head-foot-band-color: #536162 !default;
 
 $grey-color:       #828282 !default;
