--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -51,7 +51,7 @@
     top: 9px;
     right: $spacing-unit / 2;
     background-color: $background-color;
-    border: 1px solid $grey-color-light;
+    // border: 1px solid $grey-color-light;
     border-radius: 5px;
     text-align: right;
 
@@ -152,6 +152,12 @@
   width: -webkit-calc(45% - (#{$spacing-unit} / 2));
   width:         calc(45% - (#{$spacing-unit} / 2));
 }
+
+// #mc_embed_signup{
+//   background:#1E5128; 
+//   clear:left; 
+//   font: 14px Helvetica,Arial,sans-serif; 
+// }
 
 @include media-query($on-laptop) {
   .footer-col-1,
