--- a/_layouts/blogs.html
+++ b/_layouts/blogs.html
@@ -26,7 +26,8 @@ layout: default
             </a>
             </h3>
             {%- if site.show_excerpts -%}
-            {{ post.excerpt }}
+              {{post.subtitle}}
+            <!-- {{ post.excerpt }} -->
             {%- endif -%}
         </li>
       {%- endfor -%}
