--- a/_layouts/fiction.html
+++ b/_layouts/fiction.html
@@ -19,7 +19,8 @@ layout: default
           </a>
         </h3>
         {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
+          {{post.subtitle}}
+          <!-- {{ post.excerpt }} -->
         {%- endif -%}
       </li>
     {%- endfor -%}
