--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,8 @@ layout: default
           </a>
         </h3>
         {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
+          {{ post.subtitle }}
+          <!-- {{post.excerpt}} -->
         {%- endif -%}
       </li>
       {%- endfor -%}
